--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="line.html">Line chart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bars.html">Histograma</a>
+                        <a class="nav-link" href="bars.html">Histogram</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="table.html">Table</a>
@@ -56,9 +56,19 @@
             MSE: 0.30 <br> 
             RMSE: 0.55 <br>
             Accuracy: 87.37%</h4>
-            <p class="lead">
+            <p class="lead">Puede acceder a los datos obtenidos aqui: 
+                <ul>
+                    <li>
+                        <a href="https://raw.githubusercontent.com/gajeto/XGBoost-Visualization/main/data/results.json">Resultados</a>
+                    </li>
+                    <li>
+                        <a href="https://raw.githubusercontent.com/gajeto/XGBoost-Visualization/main/data/metrics.json">Metricas</a>
+                    </li>
+                </ul>
             </p>
         </div>
+        <span>Desarrollado por: Gustavo Jerez<br>Estudiante Ingeniería de Sistemas UniMagdalena</span>
     </section>
+    
 </body>
 </html>
